#409 prevent wrapping of lines in queue-place info in registration tab
In the registrationtab the info telling which queue place the user got (right of the unqueue/register/etc. buttons) got wrapped so the # in the queue stood alone in an extra line (at least in university theme)

--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,7 @@
     display:inline;
     margin-left:1em;
     margin-right:1em;
+	white-space:nowrap;
 }
 
 .path-mod-grouptool .group .showmembers {
@@ -272,6 +273,7 @@
     vertical-align:middle;
     margin-left:1em;
     margin-right:1em;
+	white-space:nowrap;
 }
 
 .path-mod-grouptool .group .fillratio {
